APS-192: search bar overlapping issue resolved.

--- a/docroot/themes/custom/cleco/src/scss/components/_header.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_header.scss
@@ -188,7 +188,10 @@
   align-items: center;
   justify-content: flex-end;
   @include property-scale(margin-left, map-multiplier($container-padding-map, 0.5));
-
+  padding-left: 3rem !important;
+  @media only screen and (max-width: $breakpoint-form){
+    padding-left: 1rem !important;
+  }
   @media only screen and (max-width: $media-screen-medium) {
     margin: 0 0 0 auto;
   }
